package edu.apu.kiosk.observer;

import edu.apu.kiosk.domain.Menu;

public interface MenuObserver {
    void update(Menu menu);
}
